tests/baselines/reference/parserConstructorDeclaration11.errors.txt
parserConstructorDeclaration11.ts(2,14): error TS1098: Type parameter list cannot be empty.
parserConstructorDeclaration11.ts(2,15): error TS1092: Type parameters cannot appear on a constructor declaration.


==== parserConstructorDeclaration11.ts (2 errors) ====
    class C {
      constructor<>() { }
                 ~~
!!! error TS1098: Type parameter list cannot be empty.
                  
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
    }